<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">zipCloset</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook_login">Login to Facebook</string>
    <string name="skip">Skip</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="goToClosetButton">Go To Closet</string>
    <string name="tagButton">TAG</string>
    <string name="zipButton">"Zip "</string>
    <string name="tagHistory">Zip History</string>
    <string name="postToFacebook">Post To Facebook</string>
    <string name="title_activity_go_to_closet">GoToCloset</string>
    <string name="title_activity_zip">ZipActivity</string>
    <string name="title_activity_tags_history">TagsHistoryActivity</string>
    <string name="writeToTag">Write to Tag</string>
    <string name="loading">Loading</string>
    <string name="id">NFC_Tag_Id</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="purchase">Purchase Item</string>
    <string name="favorite">Favorite</string>
    <string name="favoriteButton">Add to Favorites</string>

</resources>
