<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu" >

    <Button
        android:id="@+id/goToClosetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goToClosetButton" />

    <Button
        android:id="@+id/tagButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zipButton" />

    <Button
        android:id="@+id/allZipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagHistory" />

    <EditText
        android:id="@+id/facebookPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/postToFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postToFacebook" />

</LinearLayout>
